gitignore all of services

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,1 @@
-/services/arcade
-/services/ffusion.se
-/services/f.kth.se
-/services/fysikalen.se
-/services/fnkth.se
-/services/fnkth.se-flask
-/services/google
-/services/kons-count
-/services/namndkompassen
-/services/misc
-/services/fadderiet
-/services/nginx/certificates
-/services/cyberfohs
-/services/certbot
-/services/signature
-/services/bittan_marke
-/services/bittan_marke_frontend
-/services/bittan_fysikalen
-/services/bittan_fysikalen_frontend
+/services
