Specify bittan-marke env file

--- a/environments.conf
+++ b/environments.conf
@@ -5,6 +5,6 @@ NAMNDKOMPASSEN_VERSION=.env
 SANGBOK_SHA=.env
 CYBERFOHS_VERSION=./project-ops/cyberfohs/.env
 SIGNATURE_VERSION=.env
-BITTAN_MARKE_VERSION=.env
+BITTAN_MARKE_VERSION=./project-ops/bittan-marke/.env
 BITTAN_FYSIKALEN_VERSION=./project-ops/bittan-fysikalen/.env
 FNKTHSE_VERSION=./project-ops/fnkth.se/.env
