Small fixes for fnkthse launch

--- a/compose.yaml
+++ b/compose.yaml
@@ -290,6 +290,6 @@ services:
   fnkth.se-flask:
     container_name: fnkth.se-flask
     image: ghcr.io/fysiksektionens-naringslivsnamnd/hemsida-backend:${FNKTHSE_VERSION}
-    env_file:
-      - ./services/fnkth.se-flask/.env
+    volumes:
+      - ./services/fnkth.se-flask/.env:/app/.env
     restart: always
