Update nginx conf to match fnkth.se

--- a/nginx.conf
+++ b/nginx.conf
@@ -225,32 +225,27 @@ http {
 
         root /fnkth.se;
 
-        # Serve static files
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
+	# Send everything to Flask, including /, /events, /contact, etc.
+	    location / {
+		proxy_pass http://fnkth.se-flask:5001;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	    }
 
-        location /pages/ {
-            try_files $uri $uri/ =404;
-        }
+	    # Serve static files directly from Flask's static folder
+	    location /static/ {
+		proxy_pass http://fnkth.se-flask:5001/static/;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+	    }
 
-        location /assets/ {
-            try_files $uri $uri/ =404;
-        }
+	    # n.b: this works for some reason
+	    location /favicon.ico {
+		proxy_pass http://fnkth.se-flask:5001/favicon.ico;
+		proxy_set_header Host $host;
+	    }
 
-        # POST form submission to Flask
-        location = /pages/contact {
-            proxy_pass http://fnkth.se-flask:5001/pages/contact;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
-
-        # JSON API requests
-        location /api/ {
-            proxy_pass http://fnkth.se-flask:5001/api/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
     }
 
     # Automatically send all requests to fysiksektionen.se to f.kth.se
