Add server config for valkompassen

--- a/environments.conf
+++ b/environments.conf
@@ -8,3 +8,4 @@ SIGNATURE_VERSION=.env
 BITTAN_MARKE_VERSION=./project-ops/bittan-marke/.env
 BITTAN_FYSIKALEN_VERSION=./project-ops/bittan-fysikalen/.env
 FNKTHSE_VERSION=./project-ops/fnkth.se/.env
+VALKOMPASSEN_VERSION=./project-ops/valkompassen/.env
