--- a/compose.yaml
+++ b/compose.yaml
@@ -18,6 +18,7 @@ services:
       - bittan-marke-server
       - bittan-fysikalen-server
       - fnkth.se-flask
+      - valkompassen
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
 
@@ -364,3 +365,18 @@ services:
     volumes:
       - ./services/fnkth.se-flask/.env:/app/.env
     restart: always
+
+  # valkompassen
+  valkompassen:
+    container_name: valkompassen
+    image: ghcr.io/fysiksektionen/valkompass-2025-backend:${VALKOMPASSEN_VERSION}
+    deploy:
+      resources:
+        limits:
+          cpus: '0.15'
+    env_file: ./services/valkompassen/.env
+    environment:
+      HOST: 0.0.0.0
+      SUBPATH: "/valkompassen"
+      PORT: 5000
+      DEBUG: false
